--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -7,7 +7,7 @@
 <body class="bg-light text-dark">
   <%- include('./partials/navbar.ejs') %>
   <div class="container mt-4">
-   <button class="btn btn-success" onclick="window.location.href='/order-success'">Place Order</button> 
+   <button class="btn btn-success" onclick="window.location.href='/order-success'">Placed Order</button> 
    <button class="btn btn-success" onclick="window.location.href='/order-history'">Order History</button>
 
     <h1>Your Cart</h1>
